<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>parent-pom</artifactId>
        <groupId>com.randomnoun.build</groupId>
        <version>1.40</version>
    </parent>

    <groupId>com.randomnoun.common</groupId>
    <artifactId>jessop</artifactId>
    <packaging>jar</packaging>
    <version>2.0.1</version>
    
    <name>Jessop</name>
    <description>Multi-language templates in the style of Java Server Pages</description>
    <url>https://randomnoun.github.io/jessop/</url>
    <inceptionYear>2016-09-16</inceptionYear>

    <properties>
        <jdk.version>25</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <graalvm.version>25.0.2</graalvm.version>
        <compiler.dir>${project.build.directory}/compiler</compiler.dir>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>com.randomnoun.common</groupId>
            <artifactId>log4j-one</artifactId>
            <version>1.0.1</version>
            <optional>true</optional><!-- most downstream projects will provide their own logj4-compatible logging framework -->
        </dependency>
        
        <dependency>
            <groupId>org.luaj</groupId>
            <artifactId>luaj-jse</artifactId>
            <version>3.0.1</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.python</groupId>
            <artifactId>jython</artifactId>
            <version>2.5.3</version> <!-- 2.5.3 works, but 2.7.0 and 2.7.1b3 return a null ScriptEngine -->
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.beanshell</groupId>
            <artifactId>bsh</artifactId>
            <version>2.0b5</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        
        <!-- 
          have removed support for rhino (the original, the openjdk version and the sun version), 
          everyone's on graal these days 
        -->
        
        <dependency>
            <groupId>org.jruby</groupId>
            <artifactId>jruby-complete</artifactId>
            <version>9.4.14.0</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        
        <!--  armed bear lisp -->
        <dependency>
            <groupId>org.abcl</groupId> <!--  org.armedbear.lisp -->
            <artifactId>abcl</artifactId>
            <version>1.9.2</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.abcl</groupId> <!--  org.armedbear.lisp -->
            <artifactId>abcl-contrib</artifactId>
            <version>1.9.2</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        
        <!-- graalvm javascript -->
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>${graalvm.version}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency> 
            <groupId>org.graalvm.polyglot</groupId> 
            <artifactId>polyglot</artifactId> 
            <version>${graalvm.version}</version> 
        </dependency>
        <dependency> 
            <groupId>org.graalvm.polyglot</groupId> 
            <artifactId>js</artifactId> 
            <version>${graalvm.version}</version> 
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-scriptengine</artifactId>
            <version>${graalvm.version}</version>
        </dependency>
    
    </dependencies>

    <!--  these are on github now. except for the bits on gitlab. -->
    <scm>
        <connection>scm:git:http://gitlab.dev.randomnoun/randomnoun/jessop.git</connection>
        <developerConnection>scm:git:http://gitlab.dev.randomnoun/randomnoun/jessop.git</developerConnection>
        <url>http://gitlab.dev.randomnoun/randomnoun/jessop</url>
      <tag>jessop-2.0.1</tag>
  </scm>
    
    <build>
        <finalName>jessop</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <attach>true</attach>
                    <descriptors>
                        <descriptor>src/assembly/dist.xml</descriptor>
                    </descriptors>
                    <tarLongFileMode>posix</tarLongFileMode>
                </configuration>
                <executions>
                    <execution>
                        <id>dist-assembly</id>  <!-- this is used for inheritance merges (?) -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <!-- <version>2.12.4</version> -->
                <configuration>
                    <!-- add-opens for abcl tests -->
                    <argLine>
                        -Dpolyglot.engine.WarnInterpreterOnly=false
                        --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>                    
                </configuration>
              </plugin>
        </plugins>
        <!-- graalvm now needs 1.11 -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${jdk.version}</source>
                        <target>${jdk.version}</target>
                        <!--  so it turns out that /etc/mavenrc was wrong. sheesh. -->
                        <fork>true</fork>
                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                        <encoding>UTF-8</encoding>
                        <verbose>true</verbose>
                        <!--  allow linking against rt.jar (for sun internal classes) -->
                        <compilerArgs>
                            <arg>-XDignore.symbol.file</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
    
    <distributionManagement>
        <site>
            <id>gh-pages</id>
            <name>jessop Website</name>
            <url>git:http://gitlab.dev.randomnoun/randomnoun/jessop.git?gh-pages#</url>
        </site>
    </distributionManagement>
    

</project>